tests/sumo/tls/NEMA/errors/testsuite.sumo
# old 'basic' test, problem exposed via #9880 (inconsistent maxDur)
1

# old 'basic' test, problem exposed via #9880 (inconsistent maxDur)
1_ignore

# provided by Max (#9940)
4way_error

# trying to load phases from a 'static' controller
missingPhaseName

# trying to load phases from a 'static' controller
badPhases
customDetectorsMissing
